--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "codemirror": "^5.65.16",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -21,6 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server:dev": "nodemon server.js",
+    "server:prod": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
